--- a/test-and-demo.conf
+++ b/test-and-demo.conf
@@ -6,9 +6,12 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
+	# Jinjuan Hu: Set the ServerName
 	ServerName test-and-demo.com
 
 	ServerAdmin webmaster@localhost
+	# Jinjuan Hu: Update root directory to point to directory containing
+	#             the simple index.html
 	DocumentRoot /var/www/test/html
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
@@ -26,6 +29,7 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
+	# Jinjuan Hu: Update the server alias
 	ServerAlias *.test-and-demo.com
 </VirtualHost>
 
